tests/invalid/runtime/math_log_domain.pts
import Math;

function main() : void {
    Math.log(0.0);
}
